--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/stroke_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/stroke_row.scss
@@ -27,12 +27,7 @@
         stroke: var(--input-foreground-color);
       }
       .stroke-width-input {
-        @include removeInputStyle;
-        @include titleTipography;
-        height: $s-32;
-        width: 100%;
-        margin: 0;
-        color: var(--input-foreground-color-active);
+        @extend .numeric-input-base;
       }
     }
     .select-wrapper {
