:lipstick: Update dashboard design with new UI

--- a/frontend/resources/styles/common/dependencies/colors.scss
+++ b/frontend/resources/styles/common/dependencies/colors.scss
@@ -4,6 +4,22 @@
 //
 // Copyright (c) KALEIDOS INC
 
+// New UI colors
+$db-primary: #18181a;
+$db-secondary: #000000;
+$db-tertiary: #212426;
+$db-cuaternary: #2e3434;
+
+$df-primary: #ffffff;
+$df-secondary: #8f9da3;
+
+$da-primary: #7efff5;
+$da-primary-muted: rgba(126, 255, 245, 0.3);
+$da-secondary: #bb97d8;
+$da-tertiary: #00d1b8;
+
+$d-shadow: rgba(0, 0, 0, 0.6);
+
 // Colors
 $color-white: #ffffff;
 $color-black: #000000;
