--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
@@ -13,47 +13,93 @@
   .color-info {
     display: flex;
     align-items: center;
-    padding: 0 $s-8;
-    gap: $s-4;
+    gap: $s-1;
     border-radius: $s-8;
-    background-color: var(--input-background-color);
+    background-color: var(--input-details-color);
     height: $s-32;
+    width: 100%;
     flex-grow: 1;
-
-    .color-name {
-      @include titleTipography;
+    .color-name-wrapper {
+      display: flex;
+      align-items: center;
+      border-radius: $br-8;
+      background-color: var(--input-background-color);
       flex-grow: 1;
-      color: var(--input-foreground-color-active);
-    }
-    .detach-btn {
-      @extend .button-tertiary;
-      height: $s-32;
-      width: $s-28;
-      svg {
-        @extend .button-icon;
+
+      .color-bullet-wrapper {
+        @extend .input-element;
+        background-color: transparent;
+        border-radius: $br-8 0 0 $br-8;
+        padding: 0 $s-4 0 $s-8;
+        &:hover {
+          background-color: transparent;
+        }
+      }
+      .color-name {
+        @include titleTipography;
+        display: flex;
+        align-items: center;
+        height: $s-32;
+        flex-grow: 1;
+        color: var(--input-foreground-color-active);
+      }
+      .detach-btn {
+        @extend .button-tertiary;
+        height: $s-32;
+        width: $s-28;
+        border-radius: 0 $br-8 $br-8 0;
+        svg {
+          @extend .button-icon;
+        }
+      }
+      .color-input-wrapper {
+        @extend .input-element;
+        border-radius: $br-0;
+
+        .color-input {
+          @extend .numeric-input-base;
+          padding-left: $s-4;
+          &:active,
+          &:focus {
+            background-color: var(--input-background-color-active);
+            border: $s-1 solid var(--input-border-color-active);
+          }
+        }
+      }
+      &:hover,
+      &:focus,
+      &:focus-within {
+        .color-bullet-wrapper,
+        .color-name,
+        .detach-btn,
+        .color-input-wrapper {
+          background-color: var(--input-background-color-hover);
+        }
+        .detach-btn svg {
+          stroke: var(--input-foreground-color-active);
+        }
       }
     }
-    .opacity-input-element {
+    .gradient-name-wrapper {
+      .color-name {
+        border-radius: 0 $br-8 $br-8 0;
+      }
+    }
+    .opacity-element-wrapper {
       @extend .input-element;
       width: $s-60;
-      border-left: $s-1 solid var(--input-details-color);
       border-radius: 0 $br-8 $br-8 0;
       padding-left: $s-8;
       .opacity-input {
         @extend .numeric-input-base;
+        border-radius: 0 $br-8 $br-8 0;
+        min-width: $s-28;
       }
       .icon-text {
         @include flexCenter;
         height: $s-32;
         margin-right: $s-4;
         padding-top: $s-2;
-      }
-    }
-    .input-element {
-      @extend .input-element;
-      flex-grow: 1;
-      .color-input {
-        @extend .numeric-input-base;
       }
     }
 
